experiments with multiple architectures

--- a/targets/android_armv7/Makefile
+++ b/targets/android_armv7/Makefile
@@ -1,9 +1,11 @@
 PROJECT_NAME = SdcardCid
+APP_ABI ?= x86
+export APP_ABI
 
 # QT_ROOT must contain bin include jar lib mkspecs plugins qml src translations
-# Normally it is located in /opt/Qt/5.8/android_armv7
+# Normally it is located in /opt/Qt/5.8/android_$(APP_ABI)
 
-QT_ROOT ?= /opt/Qt/5.8/android_armv7
+QT_ROOT ?= /opt/Qt/5.8/$(QT_ANDROID_ABI)
 
 # Source this .pro file
 APP_PRO_FILE ?= $(abspath $(SRC_DIR)/SdcardCid.pro)
@@ -27,29 +29,23 @@ export ANDROID_NDK_ROOT=/opt/crystax
 
 export ANDROID_NDK_HOST=linux-x86_64
 export ANDROID_NDK_PLATFORM=android-17
-export ANDROID_NDK_TOOLCHAIN_PREFIX=arm-linux-androideabi
+# export ANDROID_NDK_TOOLCHAIN_PREFIX=arm-linux-androideabi
 export ANDROID_NDK_VERSION=4.9
-export ANDROID_NDK_TOOLS_PREFIX=arm-linux-androideabi
+# export ANDROID_NDK_TOOLS_PREFIX=arm-linux-androideabi
 
 # qmake and androiddeployqt are normally found under QT_ROOT
 QMAKE = $(QT_ROOT)/bin/qmake
 ANDROIDDEPLOYQT = $(QT_ROOT)/bin/androiddeployqt
 
 .PHONY: default
-default: all
+default: apk
 
 .PHONY: clean
 clean:
 	@rm -rf $(APP_BUILD_DIR) $(DIST_DIR)
 
-.PHONY: debug-apk
-all: debug-apk
-
-.PHONY: release-apk
-release-apk: $(DIST_DIR)/build/outputs/apk/android_armv7-release.apk
-
-.PHONY: debug-apk
-debug-apk: $(DIST_DIR)/build/outputs/apk/android_armv7-debug.apk
+.PHONY: apk
+apk: $(DIST_DIR)/build/outputs/apk/SdcardCid.apk
 
 .PHONY: plugin
 plugin: $(PLUGIN_DIST_DIR)/qmldir $(PLUGIN_DIST_DIR)/libSdcardCidPlugin.so
@@ -70,19 +66,7 @@ $(PLUGIN_DIST_DIR)/qmldir:
 	@mkdir -p $(shell dirname $@)
 	@echo -ne 'module net.pezzato.sdcardcid\nplugin SdcardCidPlugin' > $@
 
-$(DIST_DIR)/build/outputs/apk/android_armv7-release.apk: plugin
-	@mkdir -p $(APP_BUILD_DIR) $(DIST_DIR)
-	cd $(APP_BUILD_DIR) && \
-		$(QMAKE) $(APP_PRO_FILE) -spec android-g++ && \
-		$(MAKE) qmake_all && \
-		$(MAKE) && \
-		$(MAKE) INSTALL_ROOT=$(DIST_DIR) install && \
-		$(ANDROIDDEPLOYQT) --input $(DEPLOYMENT_SETTINGS_JSON) \
-		--output $(DIST_DIR) --verbose --deployment bundled \
-		--gradle --release
-# FIXME sign
-
-$(DIST_DIR)/build/outputs/apk/android_armv7-debug.apk: plugin
+$(DIST_DIR)/build/outputs/apk/SdcardCid.apk: plugin
 	@mkdir -p $(APP_BUILD_DIR) $(DIST_DIR)
 	cd $(APP_BUILD_DIR) && \
 		$(QMAKE) $(APP_PRO_FILE) -spec android-g++ && \
@@ -92,15 +76,3 @@ $(DIST_DIR)/build/outputs/apk/android_armv7-debug.apk: plugin
 		$(ANDROIDDEPLOYQT) --input $(DEPLOYMENT_SETTINGS_JSON) \
 		--output $(DIST_DIR) --verbose --deployment bundled \
 		--gradle
-
-.PHONY: run
-run: debug-install
-	adb shell am start -a android.intent.action.MAIN -n net.pezzato.sdcardcid/net.pezzato.sdcardcid.SdcardCid
-
-.PHONY: release-install
-install: release-apk
-	adb install -r $(DIST_DIR)/build/outputs/apk/android_armv7-release.apk
-
-.PHONY: debug-install
-debug-install: debug-apk
-	adb install -r $(DIST_DIR)/build/outputs/apk/android_armv7-debug.apk
