--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,4 +54,27 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    defaultConfig {
+      versionCode 1
+    }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi', 'armeabi-v7a'
+            universalApk true
+        }
+    }
+
+    project.ext.versionCodes = ['armeabi': 1, 'armeabi-v7a': 2, 'arm64-v8a': 3, 'mips': 5, 'mips64': 6, 'x86': 8, 'x86_64': 9]
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            output.versionCodeOverride =
+                project.ext.versionCodes.get(output.getFilter(
+                    com.android.build.OutputFile.ABI), 0) * 10000000 + android.defaultConfig.versionCode
+        }
+    }
 }
