--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,7 +63,7 @@ android {
         abi {
             enable true
             reset()
-            include 'x86', 'armeabi', 'armeabi-v7a'
+            include 'x86', 'armeabi-v7a'
             universalApk true
         }
     }
